# rustine-dbal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: 00-overview.md  01-connection.md  02-driver.md  03-platform.md  04-query-builder.md  05-schema.md  06-types.md  07-rust-mapping.md  architecture.md  epics.md  prd.md
rustine/: Cargo.toml
rustine-core/: Cargo.toml
rustine-core/src/: config.rs  from_sql.rs  lib.rs  sql_value.rs  to_sql.rs
rustine-driver/: Cargo.toml
rustine-driver/src/: connection.rs  driver.rs  lib.rs  result.rs  statement.rs
rustine-platform/: Cargo.toml
rustine-platform/src/: lib.rs  platform.rs
rustine-query/: Cargo.toml
rustine-query/src/: lib.rs
rustine-schema/: Cargo.toml
rustine-schema/src/: lib.rs
rustine/src/: lib.rs
src/: lib.rs
src/connection/: connection.rs  mod.rs  transaction.rs
src/core/: config.rs  error.rs  from_sql.rs  mod.rs  parameter.rs  sql_value.rs  to_sql.rs
src/driver/: connection.rs  driver.rs  mod.rs  result.rs  statement.rs
src/driver/sqlite/: connection.rs  driver.rs  mod.rs  result.rs  statement.rs
src/platform/: mod.rs  platform.rs  types.rs
src/query/: builder.rs  expr.rs  mod.rs
src/schema/: manager.rs  mod.rs
