# ============================================================================
# Versionierung nach Semantic Versioning (https://semver.org/lang/de/)
# ============================================================================
# Format: MAJOR.MINOR.PATCH[-PRERELEASE][+BUILD]
#
# MAJOR: Inkompatible API-Änderungen
# MINOR: Neue Funktionalität (abwärtskompatibel)
# PATCH: Bugfixes (abwärtskompatibel)
#
# Pre-Release: 0.1.0-alpha.1, 0.1.0-beta.1, 0.1.0-rc.1
# Build-Metadaten: 0.1.0+20241202
#
# Während 0.x.y: API kann sich noch ändern
# Ab 1.0.0: Stabile öffentliche API
# ============================================================================

[package]
name = "rustine-dbal"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Elmar Röser <elmar@schrecknet.de>"]
license = "MIT OR Apache-2.0"
description = "Idiomatic Rust Database Abstraction Layer inspired by Doctrine DBAL"
repository = "https://github.com/elmar-roeser/rustine-dbal"
homepage = "https://github.com/elmar-roeser/rustine-dbal"
documentation = "https://docs.rs/rustine-dbal"
readme = "README.md"
keywords = ["database", "sql", "dbal", "query-builder", "schema"]
categories = ["database"]

[dependencies]
# Error handling
thiserror = "2.0"

# Async
async-trait = "0.1"
futures = "0.3"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Types (optional)
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
rust_decimal = { version = "1.0", features = ["serde"], optional = true }

# Logging (optional)
tracing = { version = "0.1", optional = true }

# Database drivers (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
tokio = { version = "1.0", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["chrono", "uuid", "json", "decimal"]

# Type support
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
json = ["dep:serde", "dep:serde_json"]
decimal = ["dep:rust_decimal"]

# Extras
tracing = ["dep:tracing"]

# Database drivers
sqlite = ["dep:sqlx", "dep:tokio"]
