# ============================================================================
# Versionierung nach Semantic Versioning (https://semver.org/lang/de/)
# ============================================================================
# Format: MAJOR.MINOR.PATCH[-PRERELEASE][+BUILD]
#
# MAJOR: Inkompatible API-Änderungen
# MINOR: Neue Funktionalität (abwärtskompatibel)
# PATCH: Bugfixes (abwärtskompatibel)
#
# Pre-Release: 0.1.0-alpha.1, 0.1.0-beta.1, 0.1.0-rc.1
# Build-Metadaten: 0.1.0+20241202
#
# Während 0.x.y: API kann sich noch ändern
# Ab 1.0.0: Stabile öffentliche API
# ============================================================================

[package]
name = "rustine-dbal"
version = "0.5.1"
edition = "2021"
rust-version = "1.75"
authors = ["Elmar Röser <elmar@schrecknet.de>"]
license = "MIT OR Apache-2.0"
description = "Idiomatic Rust Database Abstraction Layer inspired by Doctrine DBAL"
repository = "https://github.com/elmar-roeser/rustine-dbal"
homepage = "https://github.com/elmar-roeser/rustine-dbal"
documentation = "https://docs.rs/rustine-dbal"
readme = "README.md"
keywords = ["database", "sql", "dbal", "query-builder", "schema"]
categories = ["database"]

[dependencies]
# Error handling
thiserror = "2.0"

# Async
async-trait = "0.1"
futures = "0.3"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Types (optional)
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
rust_decimal = { version = "1.0", features = ["serde"], optional = true }

# Logging (optional)
tracing = { version = "0.1", optional = true }

# Database drivers (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
tokio = { version = "1.0", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["chrono", "uuid", "json", "decimal"]

# Type support
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
json = ["dep:serde", "dep:serde_json"]
decimal = ["dep:rust_decimal"]

# Extras
tracing = ["dep:tracing"]

# Database drivers
sqlite = ["dep:sqlx", "dep:tokio"]

# ============================================================================
# Lints Configuration
# ============================================================================

[lints.rust]
# --- Safety ---
unsafe_code = "deny"

# --- Compatibility ---
future_incompatible = { level = "deny", priority = 1 }

# --- Dependencies ---
unused_crate_dependencies = "allow"

# --- Code Hygiene ---
dead_code = "warn"
unused_imports = "warn"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "warn"

# --- Documentation ---
missing_docs = "warn"

# --- Debuggability ---
missing_debug_implementations = "warn"

[lints.clippy]
# --- Group Settings ---
cargo = "warn"
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"

# --- Safety & Robustness ---
expect_used = { level = "deny", priority = 1 }
large_stack_arrays = { level = "warn", priority = 1 }
panic = { level = "warn", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }

# --- Dependencies & Imports ---
enum_glob_use = { level = "deny", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
wildcard_imports = { level = "deny", priority = 1 }

# --- Code Hygiene & Process ---
dbg_macro = { level = "deny", priority = 1 }
redundant_pub_crate = { level = "warn", priority = 1 }
todo = { level = "deny", priority = 1 }
unnecessary_wraps = { level = "deny", priority = 1 }

# --- Code Layout & Complexity ---
too_many_lines = { level = "warn", priority = 1 }

# --- Performance ---
box_collection = { level = "deny", priority = 1 }
missing_const_for_fn = { level = "deny", priority = 1 }

# --- Documentation ---
missing_docs_in_private_items = { level = "warn", priority = 1 }
missing_errors_doc = { level = "warn", priority = 1 }
missing_panics_doc = { level = "warn", priority = 1 }

# --- Style & Readability ---
use_self = { level = "warn", priority = 1 }
