[package]
name = "rustine-driver"
description = "Database driver abstractions for Rustine DBAL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustine-core.workspace = true
async-trait.workspace = true
futures.workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = []
mysql = []
sqlite = []
mssql = []
