[package]
name = "rustine-platform"
description = "SQL platform abstractions for Rustine DBAL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustine-core.workspace = true
